# Pion_CEX_Studies

notebook/: pi0_selection_verification.ipynb
pi0_event_selection/: pi0_evt_selection.cpp
pi0_mc_xsec_variables/: CMakeLists.txt  pi0_mc_xsec.cpp  pi0_mc_xsec.h
pi0_reco_xsec/: CMakeLists.txt  EventSelection.cpp  EventSelection.h  hists.json  pi0_reco_xsec.cpp  pi0_reco_xsec.h  selection.h  selection_params.json
pi0_reco_xsec_variables/: hists.json  pi0_reco_xsec.cpp  pi0_reco_xsec.h
utilities/: CrossSection.cpp  CrossSection.h  Histograms.cpp  Utilities.hpp
